compilers/ID/cool/regression/BASE_semanttest/selftype.cl.stderr
./BASE_semanttest/selftype.cl:6: In redefined method foo, return type B is different from original return type SELF_TYPE.
Compilation halted due to static semantic errors.
